# semantic-link-labs

./: .gitignore  .readthedocs.yaml  =12.9.0  AGENTS.md  README.md  _config.yml  conda.yml  environment.yml  function_examples.md  pyproject.toml  semantic-link-labs.sln  setup.py
.github/workflows/: _generate_func_examples.py  _generate_readme.py  build.yaml  codeql.yaml  pages.yaml
.pipelines/: release.yml
docs/: environment.yml  function_examples.md  index.md  requirements.txt
docs/source/: conf.py  index.rst  sempy_labs.rst
notebooks/: Best Practice Analyzer Report.ipynb  Capacity Migration.ipynb  DAX Performance Testing.ipynb  Delta Analyzer.ipynb  Lakehouse Table Maintenance.ipynb  List Large Semantic Models.ipynb  Migrate Semantic Model&Report.ipynb  Migration to Direct Lake.ipynb  Model Optimization.ipynb  Perf Lab.ipynb  Query Scale Out.ipynb  Report Analysis.ipynb  Report Check.ipynb  SQL.ipynb  Semantic Model Management.ipynb  Semantic Model Refresh.ipynb  Service Principal.ipynb  Tabular Object Model.ipynb  Warehouse.ipynb  databricks.ipynb
semantic_link_labs-0.14.3/: .gitignore  PKG-INFO  pyproject.toml
semantic_link_labs-0.9.3/: .readthedocs.yaml
sempy_labs/: AI.py  ClearCache.py  Connections.py  CreateBlankSemanticModel.py  CreatePQTFile.py  DataCoverageDef.py  DirectLakeSchemaCompare.py  DirectLakeSchemaSync.py  Fallback.py  GenerateReport.py  GenerateSemanticModel.py  GetDirectLakeLakehouse.py  GetLakehouseColumns.py  GetLakehouseTables.py  GetMeasureDependencies.py  GetSemanticModelBim.py  GetSharedExpression.py  Guardrails.py  HelperFunctions.py  Lakehouse.py  ListDirectLakeModelCalcTables.py  ListFunctions.py  LogAnalytics.py  MeasureDependencyTree.py  MigrateCalcTablesToLakehouse.py  MigrateCalcTablesToSemanticModel.py  MigrateModelObjectsToSemanticModel.py  MigrateTablesColumnsToSemanticModel.py  MigrationValidation.py  ModelAutoBuild.py  ModelBPA.py  OneLakeIntegration.py  QSO.py  RefreshCalcTables.py  RefreshSemanticModel.py  ReportFunctions.py  ReportRebind.py  ShowUnsupportedDirectLakeObjects.py  TOM.py  Translations.py  (+20 more)
tests/: conftest.py  format_dax_preview.html  test_capture_dax_query_timings.py  test_dax.py  test_dax_analysis.py  test_environments.py  test_format_dax.py  test_friendly_case.py  test_generate_direct_lake_semantic_model.py  test_get_semantic_model_size.py  test_lakehouse_partitioning.py  test_parse_dax.py  test_report_semantic_model_objects.py  test_semantic_model_diff.py  test_semantic_model_diff_editor.py  test_shortcuts.py  test_tom.py
(+761 files in other folders)
